# amplifier-bundle-skills

./: .gitignore  README.md  bundle.md
behaviors/: skills-tool.yaml  skills.yaml
context/: skills-instructions.md
modules/tool-skills/: README.md  pyproject.toml
modules/tool-skills/amplifier_module_tool_skills/: __init__.py  discovery.py  hooks.py  model_resolver.py  preprocessing.py  sources.py
modules/tool-skills/tests/: test_auto_load.py  test_code_review_power_skill.py  test_coordinator_integration.py  test_discovery.py  test_enhanced_discovery.py  test_hook_integration.py  test_hooks.py  test_integration.py  test_mass_change_power_skill.py  test_model_resolver.py  test_multi_source.py  test_preprocessing.py  test_real_session.py  test_session_debug_power_skill.py  test_skills_assist_power_skill.py  test_skills_discovery.py  test_source_parameter.py  test_sources.py  test_tool.py
modules/tool-skills/tests/fixtures/skills/amplifier-philosophy/: SKILL.md
modules/tool-skills/tests/fixtures/skills/module-development/: SKILL.md
modules/tool-skills/tests/fixtures/skills/python-standards/: SKILL.md
skills/batch/: SKILL.md
skills/code-review/: SKILL.md
skills/debug/: SKILL.md
skills/image-vision/: SKILL.md  health-check.sh  patterns.md  setup.md  vision-analyze-robust.sh  vision-analyze.sh
skills/mass-change/: SKILL.md
skills/session-debug/: SKILL.md
skills/simplify/: SKILL.md
skills/skills-assist/: SKILL.md  authoring-guide.md  compatibility-matrix.md  skills-vs-agents.md  (+1 more)
tests/: test_bundle_md_foundation_include.py  test_gitignore.py
(+4 files in other folders)
